--- a/css/courses.css
+++ b/css/courses.css
@@ -8,8 +8,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-left: 60px;
-    padding-right: 60px;
+    padding-left: 100px;
+    padding-right: 100px;
 }
 
 .logo{
@@ -137,7 +137,7 @@
 }
 
 h1{
-    font-size: 30px; 
+    font-size: 30px;
     padding-bottom: 50px;
 }
 
@@ -155,6 +155,7 @@ p{
 
 .english {
     display: flex;
+    flex-wrap: wrap;
     padding-top: 50px;
     margin-left: 60px;
     margin-right: 60px;
@@ -163,6 +164,7 @@ p{
 
 .item-card1 , .item-card2, .item-card3, .item-card4 {
     display: block;
+    margin-bottom: 40px;
     text-align: center;
     width: 300px;
     height: 65vh;
@@ -191,6 +193,7 @@ p{
 
 .french {
     display: flex;
+    flex-wrap: wrap;
     padding-top: 50px;
     margin-left: 60px;
     margin-right: 60px;
@@ -199,6 +202,7 @@ p{
 
 .german {
     display: flex;
+    flex-wrap: wrap;
     padding-top: 50px;
     margin-left: 60px;
     margin-right: 60px;
@@ -210,8 +214,8 @@ p{
     justify-content: space-between;
     align-items: center;
     align-items: center;
-    padding-left: 60px;
-    padding-right: 60px;
+    padding-left: 100px;
+    padding-right: 100px;
 }
 
 .footer-menu {
