--- a/css/method materials.css
+++ b/css/method materials.css
@@ -115,6 +115,29 @@ input#search-bar{
     padding-bottom: 50px;
 }
 
+h1, h2 {
+    font-size: 30px;
+    padding-right: 100px;
+    padding-left: 100px;
+}
+
+h1 {
+    text-align: center;
+    padding-bottom: 20px;   
+}
+
+h2{
+    padding-bottom: 10px;
+}
+
+ol {
+    font-size: 25px;
+    text-align: justify;
+    padding-right: 100px;
+    padding-left: 100px;
+    padding-bottom: 10px;
+}
+
 #footer {
     display: flex;
     justify-content: space-between;
