--- a/css/team.css
+++ b/css/team.css
@@ -8,8 +8,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-left: 60px;
-    padding-right: 60px;
+    padding-left: 100px;
+    padding-right: 100px;
 }
 
 .logo{
@@ -111,8 +111,8 @@ input#search-bar{
 
 #content {
     display: block;
-    padding-left: 60px;
-    padding-right: 60px;
+    padding-left: 100px;
+    padding-right: 100px;
     padding-bottom: 50px;
 }
 
@@ -124,6 +124,9 @@ h1 {
 
 p{
     font-size: 25px;
+    text-align: justify;
+    text-indent: 25px;
+    line-height: 1.5;
 }
 
 #footer {
@@ -131,8 +134,8 @@ p{
     justify-content: space-between;
     align-items: center;
     align-items: center;
-    padding-left: 60px;
-    padding-right: 60px;
+    padding-left: 100px;
+    padding-right: 100px;
 }
 
 .footer-menu {
