--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 400px) {
+@media screen and (max-width: 430px) {
     *{
         margin: 0;
         padding: 0;
@@ -12,6 +12,7 @@
         align-items: center;
         padding-left: 10px;
         padding-right: 10px;
+        padding-bottom: 20px;
     }
     
     .logo{
@@ -59,60 +60,84 @@
         top: -60px;
         right: -20px;
     }
-    
-    .menu{
-        display: block;
-        list-style: none;
+
+    .menu {
+        display: none;
     }
-    
+
+    /* Основные стили для меню */
     .menu li {
         display: block;
         font-size: 15px;
         padding: 5px 10px;
     }
-    
-    .menu li a{
+
+    .menu li a {
         text-decoration: none;
         color: #0E0D35;
     }
-    
-    .menu li a:hover{
-        color:  #a6abb2;
+
+    .menu li a:hover {
+        color: #a6abb2;
     }
-    
+
     .dropdown {
         position: relative;
-        display: inline-block;
+        display: block;
     }
-    
+
+    /* Скрыть подменю по умолчанию */
     .dropdown-content {
         display: none;
         position: absolute;
         background-color: #f4f6f9;
         min-width: 160px;
         z-index: 1;
-        left: -140px;
+        top: 100%; /* Появляться сразу под пунктом меню */
+        left: 0;   /* Выравнивание по левому краю пункта меню */
     }
-    
+
+    /* Показать подменю при добавлении класса show */
+    .dropdown-content.show {
+        display: block;
+    }
+
     .dropdown-content a {
         color: #0E0D35;
         padding: 12px 16px;
         text-decoration: none;
         display: block;
     }
-    
+
     .dropdown-content a:hover {
         background-color: #f4f3ff;
         border: 2px solid #000;
     }
-    
-    .dropdown:hover .dropdown-content {
+
+    /* Гамбургер-иконка */
+    .hamburger-menu {
+        display: block;
+        cursor: pointer;
+        position: absolute;
+        top: 300px;
+        left: 70px;
+    }
+
+    .bar {
+        width: 25px;
+        height: 3px;
+        background-color: #333;
+        margin: 5px 0;
+    }
+
+    /* Стили для активного меню */
+    .menu.active {
         display: block;
     }
     
     #content {
         display: block;
-        padding-bottom: 50px;
+        padding-bottom: 20px;
     }
     
     .slogan{
@@ -181,7 +206,7 @@
     }
     
     .item-element-2-1 , .item-element-2-2, .item-element-2-3, .item-element-2-4 {
-        width: 300px;
+        width: 250px;
         margin-bottom: 40px;
         border: 1px solid #cfd1d3;
     }
@@ -191,7 +216,7 @@
     }
     
     .item-element-2-1 img, .item-element-2-2 img, .item-element-2-3 img, .item-element-2-4 img{
-        width: 300px;
+        width: 250px;
         height: 200px;
     }
     
