--- a/css/main.css
+++ b/css/main.css
@@ -61,8 +61,11 @@ input#search-bar{
 
 .menu{
     display: flex;
-    flex-direction: row;
     list-style: none;
+}
+
+ul {
+    display: flex;
 }
 
 .menu li {
@@ -268,7 +271,8 @@ input#search-bar{
 }
 
 .media p {
-    font-size: 20px;
+    font-size: 18px;
+    font-weight: bold;
     padding-bottom: 20px;
 }
 
@@ -303,6 +307,7 @@ input#search-bar{
     .search-container{
         width: 250px;
         display: block;
+        padding-top: 20px;
     }
       
     input#search-bar{
@@ -343,6 +348,10 @@ input#search-bar{
 
     .menu {
         display: none;
+    }
+
+    ul {
+        display: block;
     }
 
     /* Основные стили для меню */
@@ -399,7 +408,7 @@ input#search-bar{
         display: block;
         cursor: pointer;
         position: absolute;
-        top: 300px;
+        top: 250px;
         left: 70px;
     }
 
@@ -435,7 +444,7 @@ input#search-bar{
     }
     
     .slogan img{
-        width: 100%;
+        width: 100vw;
         height: 400px;
     }
     
@@ -450,7 +459,7 @@ input#search-bar{
     }
     
     .item-element-1-1 , .item-element-1-2, .item-element-1-3, .item-element-1-4 {
-        font-size: 15px;
+        font-size: 20px;
         display: flex;
         margin-bottom: 10px;
         flex-direction: column;
@@ -486,7 +495,7 @@ input#search-bar{
     }
     
     .item-element-2-1 , .item-element-2-2, .item-element-2-3, .item-element-2-4 {
-        font-size: 15px;
+        font-size: 20px;
         display: flex;
         margin-bottom: 40px;
         flex-direction: column;
@@ -501,7 +510,7 @@ input#search-bar{
     }
     
     .item-element-2-1 img, .item-element-2-2 img, .item-element-2-3 img, .item-element-2-4 img{
-        width: 300px;
+        width: 250px;
         height: 200px;
     }
     
@@ -524,7 +533,7 @@ input#search-bar{
     
     .footer-menu li {
         display: block;
-        font-size: 18px;
+        font-size: 20px;
     }
     
     .footer-menu li a{
@@ -543,7 +552,7 @@ input#search-bar{
     
     .list1 li, .list2 li {
         display: block;
-        font-size: 18px;
+        font-size: 20px;
     }
     
     .list1 li a, .list2 li a {
@@ -560,7 +569,7 @@ input#search-bar{
     }
     
     .media p {
-        font-size: 18px;
+        font-size: 20px;
         padding-bottom: 20px;
     }
     
