--- a/css/method materials.css
+++ b/css/method materials.css
@@ -1,10 +1,10 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-#header{
+#header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -12,18 +12,18 @@
     padding-right: 60px;
 }
 
-.logo{
+.logo {
     width: 150px;
     height: 150px;
 }
 
-.search-container{
+.search-container {
     width: 490px;
     display: block;
     padding-top: 75px;
 }
   
-input#search-bar{
+input#search-bar {
     margin: 0 auto;
     width: 100%;
     height: 45px;
@@ -31,26 +31,9 @@ input#search-bar{
     font-size: 1rem;
     border: 1px solid #000;
     outline: none;
-    &:focus{
-      border: 2px solid #a6abb2;
-      transition: 0.35s ease;
-      color: #000;
-      &::-webkit-input-placeholder{
-        transition: opacity 0.45s ease; 
-          opacity: 0;
-       }
-      &::-moz-placeholder {
-        transition: opacity 0.45s ease; 
-          opacity: 0;
-       }
-      &:-ms-placeholder {
-       transition: opacity 0.45s ease; 
-         opacity: 0;
-       }    
-    }
 }
-  
-.search-icon{
+
+.search-icon {
     position: relative;
     float: right;
     width: 75px;
@@ -59,10 +42,13 @@ input#search-bar{
     right: -20px;
 }
 
-
-.menu{
+.menu {
     display: flex;
     list-style: none;
+}
+
+ul {
+    display: flex;
 }
 
 .menu li {
@@ -71,12 +57,12 @@ input#search-bar{
     padding: 5px 10px;
 }
 
-.menu li a{
+.menu li a {
     text-decoration: none;
     color: #0E0D35;
 }
 
-.menu li a:hover{
+.menu li a:hover {
     color: #a6abb2;
 }
 
@@ -126,7 +112,7 @@ h1 {
     padding-bottom: 20px;   
 }
 
-h2{
+h2 {
     padding-bottom: 10px;
 }
 
@@ -141,7 +127,6 @@ ol {
 #footer {
     display: flex;
     justify-content: space-between;
-    align-items: center;
     align-items: center;
     padding-left: 60px;
     padding-right: 60px;
@@ -158,13 +143,13 @@ ol {
     padding: 5px 10px;
 }
 
-.footer-menu li a{
+.footer-menu li a {
     text-decoration: none;
     color: #0E0D35;
 }
 
-.footer-menu li a:hover{
-    color:  #a6abb2;
+.footer-menu li a:hover {
+    color: #a6abb2;
 }
 
 .list1, .list2 {
@@ -202,4 +187,210 @@ ol {
     width: 60px;
     height: 60px;
     padding: 5px;
+}
+
+@media screen and (max-width: 430px) {
+    #header {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-bottom: 20px;
+    }
+
+    .logo {
+        width: 150px;
+        height: 150px;
+    }
+
+    .search-container {
+        width: 250px;
+        display: block;
+        padding-top: 20px;
+    }
+      
+    input#search-bar {
+        margin: 0 auto;
+        width: 100%;
+        height: 45px;
+        padding: 0 20px;
+        font-size: 1rem;
+        border: 1px solid #000;
+        outline: none;
+    }
+      
+    .search-icon {
+        position: relative;
+        float: right;
+        width: 75px;
+        height: 75px;
+        top: -60px;
+        right: -20px;
+    }
+
+    .menu {
+        display: none;
+    }
+
+    ul {
+        display: block;
+    }
+
+    /* Основные стили для меню */
+    .menu li {
+        display: block;
+        font-size: 15px;
+        padding: 5px 10px;
+    }
+
+    .menu li a {
+        text-decoration: none;
+        color: #0E0D35;
+    }
+
+    .menu li a:hover {
+        color: #a6abb2;
+    }
+
+    .dropdown {
+        position: relative;
+        display: block;
+    }
+
+    /* Скрыть подменю по умолчанию */
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f4f6f9;
+        min-width: 160px;
+        z-index: 1;
+        top: 100%; /* Появляться сразу под пунктом меню */
+        left: 0;   /* Выравнивание по левому краю пункта меню */
+    }
+
+    /* Показать подменю при добавлении класса show */
+    .dropdown-content.show {
+        display: block;
+    }
+
+    .dropdown-content a {
+        color: #0E0D35;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+
+    .dropdown-content a:hover {
+        background-color: #f4f3ff;
+        border: 2px solid #000;
+    }
+
+    /* Гамбургер-иконка */
+    .hamburger-menu {
+        display: block;
+        cursor: pointer;
+        position: absolute;
+        top: 250px;
+        left: 70px;
+    }
+
+    .bar {
+        width: 25px;
+        height: 3px;
+        background-color: #333;
+        margin: 5px 0;
+    }
+
+    /* Стили для активного меню */
+    .menu.active {
+        display: block;
+    }
+    
+    #content {
+        display: block;
+        padding-bottom: 20px;
+    }
+    
+    h1, h2 {
+        font-size: 18px;
+        padding-right: 60px;
+        padding-left: 60px;
+    }
+    
+    h1 {
+        text-align: center;
+        padding-bottom: 20px;   
+    }
+    
+    h2{
+        padding-bottom: 10px;
+    }
+    
+    ol {
+        font-size: 18px;
+        text-align: justify;
+        padding-right: 60px;
+        padding-left: 60px;
+        padding-bottom: 10px;
+    }
+    
+    #footer {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    
+    .footer-menu {
+        text-align: center;
+        list-style: none;
+    }
+    
+    .footer-menu li {
+        display: block;
+        font-size: 18px;
+    }
+    
+    .footer-menu li a{
+        text-decoration: none;
+        color: #0E0D35;
+    }
+    
+    .footer-menu li a:hover{
+        color:  #a6abb2;
+    }
+    
+    .list1, .list2 {
+        text-align: center;
+        list-style: none;
+    }
+    
+    .list1 li, .list2 li {
+        display: block;
+        font-size: 18px;
+    }
+    
+    .list1 li a, .list2 li a {
+        text-decoration: none;
+        color: #0E0D35;
+    }
+    
+    .list1 li a:hover {
+        color: #a6abb2;
+    }
+    
+    .media {
+        text-align: center;
+    }
+    
+    .media p {
+        font-size: 18px;
+        padding-bottom: 20px;
+    }
+    
+    .media-item img {
+        width: 60px;
+        height: 60px;
+    }
 }
