--- a/css/about.css
+++ b/css/about.css
@@ -6,6 +6,7 @@
 
 #header{
     display: flex;
+    background-color: #e7e7eb;
     justify-content: space-between;
     align-items: center;
     padding-left: 60px;
@@ -111,6 +112,7 @@ input#search-bar{
 
 #content {
     display: block;
+    padding-top: 20px;
     padding-left: 60px;
     padding-right: 60px;
     padding-bottom: 50px;
@@ -133,6 +135,8 @@ h2, p, ul li {
 }
 
 #myChart {
+    max-width: 100%;
+    height: auto;
     padding-top: 30px;
     padding-bottom: 30px;
 }
@@ -203,6 +207,7 @@ h2, p, ul li {
     transition: 0.3s all;
 }
 .info {
+    font-size: 20px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -210,11 +215,12 @@ h2, p, ul li {
     background: #fff;
     border-radius: 20px;
     padding: 25px;
-    width: 750px;
+    width: 770px;
 }
 
 #footer {
     display: flex;
+    background-color: #e7e7eb;
     justify-content: space-between;
     align-items: center;
     align-items: center;
@@ -277,4 +283,308 @@ h2, p, ul li {
     width: 60px;
     height: 60px;
     padding: 5px;
+}
+
+@media screen and (max-width: 430px) {
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    
+    #header{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-bottom: 20px;
+    }
+    
+    .logo{
+        width: 150px;
+        height: 150px;
+    }
+    
+    .search-container{
+        width: 250px;
+        display: block;
+        padding-top: 20px;
+    }
+      
+    input#search-bar{
+        margin: 0 auto;
+        width: 100%;
+        height: 45px;
+        padding: 0 20px;
+        font-size: 1rem;
+        border: 1px solid #000;
+        outline: none;
+        &:focus{
+          border: 2px solid #a6abb2;
+          transition: 0.35s ease;
+          color: #000;
+          &::-webkit-input-placeholder{
+            transition: opacity 0.45s ease; 
+              opacity: 0;
+           }
+          &::-moz-placeholder {
+            transition: opacity 0.45s ease; 
+              opacity: 0;
+           }
+          &:-ms-placeholder {
+           transition: opacity 0.45s ease; 
+             opacity: 0;
+           }    
+        }
+    }
+      
+    .search-icon{
+        position: relative;
+        float: right;
+        width: 75px;
+        height: 75px;
+        top: -60px;
+        right: -20px;
+    }
+
+    .menu {
+        display: none;
+    }
+
+    ul {
+        display: block;
+    }
+
+    /* Основные стили для меню */
+    .menu li {
+        display: block;
+        font-size: 15px;
+        padding: 5px 10px;
+    }
+
+    .menu li a {
+        text-decoration: none;
+        color: #0E0D35;
+    }
+
+    .menu li a:hover {
+        color: #a6abb2;
+    }
+
+    .dropdown {
+        position: relative;
+        display: block;
+    }
+
+    /* Скрыть подменю по умолчанию */
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f4f6f9;
+        min-width: 160px;
+        z-index: 1;
+        top: 100%; /* Появляться сразу под пунктом меню */
+        left: 0;   /* Выравнивание по левому краю пункта меню */
+    }
+
+    /* Показать подменю при добавлении класса show */
+    .dropdown-content.show {
+        display: block;
+    }
+
+    .dropdown-content a {
+        color: #0E0D35;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+
+    .dropdown-content a:hover {
+        background-color: #f4f3ff;
+        border: 2px solid #000;
+    }
+
+    /* Гамбургер-иконка */
+    .hamburger-menu {
+        display: block;
+        cursor: pointer;
+        position: absolute;
+        top: 250px;
+        left: 70px;
+    }
+
+    .bar {
+        width: 25px;
+        height: 3px;
+        background-color: #333;
+        margin: 5px 0;
+    }
+
+    /* Стили для активного меню */
+    .menu.active {
+        display: block;
+    }
+    
+    #content {
+        display: block;
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-bottom: 20px;
+    }
+    
+    h1, h2, p {
+        text-indent: 10px;
+    }
+    
+    p {
+        text-indent: 0px;
+    }
+
+    h1{
+        font-size: 20px;
+        text-align: center;
+        padding-bottom: 20px;
+    }
+    
+    h2, p, ul li {
+        font-size: 20px;
+        text-align: justify;
+        padding-bottom: 10px;
+    }
+    
+    .map {
+        position: relative;
+    }
+
+    .map img {
+        width: 100%;
+        height: auto;
+    }
+    .map svg {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+    
+    .map svg path {
+        fill: none; /* Убираем обводку */
+        pointer-events: all; /* Разрешаем быть целью событий мыши */
+        cursor: pointer; /* Меняем курсор при наведении */
+    }
+    
+    .france:hover {
+        fill: #F4A460;
+    }
+    
+    .italy:hover {
+        fill: #F5DEB3;
+    }
+    
+    .germany:hover {
+        fill: #FFDAB9;
+    }
+    
+    .finland:hover {
+        fill: #D2B48C;
+    }
+    
+    .tooltip {
+        border-radius: 5px;
+        padding: 5px;
+        font-weight: 500;
+        background: #fff;
+        color: #000;
+        font-size: 20px;
+        position: absolute;
+    }
+    
+    .info__bg {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background: rgba(0,0,0,0.5);
+        opacity: 0;
+        transition: 0.3s all;
+        pointer-events: none;
+        z-index: 10;
+    }
+    .info__bg.active {
+        pointer-events: all;
+        opacity: 1;
+        transition: 0.3s all;
+    }
+    .info {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background: #fff;
+        border-radius: 20px;
+        padding: 25px;
+        width: 300px;
+    }
+    
+    #footer {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    
+    .footer-menu {
+        text-align: center;
+        list-style: none;
+    }
+    
+    .footer-menu li {
+        display: block;
+        font-size: 20px;
+    }
+    
+    .footer-menu li a{
+        text-decoration: none;
+        color: #0E0D35;
+    }
+    
+    .footer-menu li a:hover{
+        color:  #a6abb2;
+    }
+    
+    .list1, .list2 {
+        text-align: center;
+        list-style: none;
+    }
+    
+    .list1 li, .list2 li {
+        display: block;
+        font-size: 20px;
+    }
+    
+    .list1 li a, .list2 li a {
+        text-decoration: none;
+        color: #0E0D35;
+    }
+    
+    .list1 li a:hover {
+        color: #a6abb2;
+    }
+    
+    .media {
+        text-align: center;
+    }
+    
+    .media p {
+        font-size: 20px;
+        padding-bottom: 20px;
+    }
+    
+    .media-item img {
+        width: 60px;
+        height: 60px;
+    }
 }
