--- a/css/contact.css
+++ b/css/contact.css
@@ -6,6 +6,7 @@
 
 #header{
     display: flex;
+    background-color: #e7e7eb;
     justify-content: space-between;
     align-items: center;
     padding-left: 60px;
@@ -70,6 +71,10 @@ input#search-bar{
     padding: 5px 10px;
 }
 
+ul {
+    display: flex;
+}
+
 .menu li a{
     text-decoration: none;
     color: #0E0D35;
@@ -111,8 +116,10 @@ input#search-bar{
 
 #content {
     display: block;
+    padding-top: 20px;
     padding-left: 60px;
     padding-right: 60px;
+    padding-bottom: 20px;
 }
 
 #content img {
@@ -165,17 +172,9 @@ input[type="submit"] {
     height: 30px;
 }
 
-.data {
-    display: flex;
-    justify-content: flex-end;
-    margin-right: 60px;
-    margin-left: 60px;
-    padding-top: 10px;
-    font-size: 20px;
-}
-
 #footer {
     display: flex;
+    background-color: #e7e7eb;
     justify-content: space-between;
     align-items: center;
     align-items: center;
@@ -238,4 +237,261 @@ input[type="submit"] {
     width: 60px;
     height: 60px;
     padding: 5px;
+}
+
+@media screen and (max-width: 430px) {
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    
+    #header{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-bottom: 20px;
+    }
+    
+    .logo{
+        width: 150px;
+        height: 150px;
+    }
+    
+    .search-container{
+        width: 250px;
+        display: block;
+        padding-top: 20px;
+    }
+      
+    input#search-bar{
+        margin: 0 auto;
+        width: 100%;
+        height: 45px;
+        padding: 0 20px;
+        font-size: 1rem;
+        border: 1px solid #000;
+        outline: none;
+        &:focus{
+          border: 2px solid #a6abb2;
+          transition: 0.35s ease;
+          color: #000;
+          &::-webkit-input-placeholder{
+            transition: opacity 0.45s ease; 
+              opacity: 0;
+           }
+          &::-moz-placeholder {
+            transition: opacity 0.45s ease; 
+              opacity: 0;
+           }
+          &:-ms-placeholder {
+           transition: opacity 0.45s ease; 
+             opacity: 0;
+           }    
+        }
+    }
+      
+    .search-icon{
+        position: relative;
+        float: right;
+        width: 75px;
+        height: 75px;
+        top: -60px;
+        right: -20px;
+    }
+
+    .menu {
+        display: none;
+    }
+
+    ul {
+        display: block;
+    }
+
+    /* Основные стили для меню */
+    .menu li {
+        display: block;
+        font-size: 15px;
+        padding: 5px 10px;
+    }
+
+    .menu li a {
+        text-decoration: none;
+        color: #0E0D35;
+    }
+
+    .menu li a:hover {
+        color: #a6abb2;
+    }
+
+    .dropdown {
+        position: relative;
+        display: block;
+    }
+
+    /* Скрыть подменю по умолчанию */
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f4f6f9;
+        min-width: 160px;
+        z-index: 1;
+        top: 100%; /* Появляться сразу под пунктом меню */
+        left: 0;   /* Выравнивание по левому краю пункта меню */
+    }
+
+    /* Показать подменю при добавлении класса show */
+    .dropdown-content.show {
+        display: block;
+    }
+
+    .dropdown-content a {
+        color: #0E0D35;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+
+    .dropdown-content a:hover {
+        background-color: #f4f3ff;
+        border: 2px solid #000;
+    }
+
+    /* Гамбургер-иконка */
+    .hamburger-menu {
+        display: block;
+        cursor: pointer;
+        position: absolute;
+        top: 250px;
+        left: 70px;
+    }
+
+    .bar {
+        width: 25px;
+        height: 3px;
+        background-color: #333;
+        margin: 5px 0;
+    }
+
+    /* Стили для активного меню */
+    .menu.active {
+        display: block;
+    }
+    
+    #content {
+        display: block;
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-bottom: 20px;
+    }
+    
+    #content img {
+        width: 100%;
+        height: 300px;
+        padding-bottom: 20px;
+    }
+
+    h1 {
+        font-size: 20px;
+        text-align: center;
+        padding-bottom: 20px;
+    }
+    
+    .map {
+        width: 150px;
+        height: 100px;
+    }
+
+    .container {
+        display: block;
+    } 
+    
+    .contacts {
+        font-size: 20px;
+    }
+    
+    form {
+        display: flex;
+        flex-direction: column;
+        text-align: right;
+        padding-top: 20px;
+    }
+    
+    input[type="text"],
+    input[type="email"] {
+        width: 200px;
+        height: 30px;
+        box-sizing: border-box;
+    }
+    textarea {
+            width: 200px;
+            height: 120px;
+            box-sizing: border-box;
+    }
+    
+    input[type="submit"] {
+        width: 100px;
+        height: 30px;
+    }
+    
+    #footer {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    
+    .footer-menu {
+        text-align: center;
+        list-style: none;
+    }
+    
+    .footer-menu li {
+        display: block;
+        font-size: 20px;
+    }
+    
+    .footer-menu li a{
+        text-decoration: none;
+        color: #0E0D35;
+    }
+    
+    .footer-menu li a:hover{
+        color:  #a6abb2;
+    }
+    
+    .list1, .list2 {
+        text-align: center;
+        list-style: none;
+    }
+    
+    .list1 li, .list2 li {
+        display: block;
+        font-size: 20px;
+    }
+    
+    .list1 li a, .list2 li a {
+        text-decoration: none;
+        color: #0E0D35;
+    }
+    
+    .list1 li a:hover {
+        color: #a6abb2;
+    }
+    
+    .media {
+        text-align: center;
+    }
+    
+    .media p {
+        font-size: 20px;
+        padding-bottom: 20px;
+    }
+    
+    .media-item img {
+        width: 60px;
+        height: 60px;
+    }
 }
