--- a/css/courses.css
+++ b/css/courses.css
@@ -6,6 +6,7 @@
 
 #header{
     display: flex;
+    background-color: #e7e7eb;
     justify-content: space-between;
     align-items: center;
     padding-left: 100px;
@@ -126,18 +127,21 @@ ul {
     align-items: center;
     width: 100%;
     height: 100px;
-    padding-top: 50px;
+    padding-top: 60px;
     padding-bottom: 50px;
 }
 
 .flag img {
     content: url('../image/UK_flag.png');
-    position: absolute;
-    top: 25%;
-    left: 39%;
+    position: relative;
+    left: -1%;
     width: 100px;
     height: 75px;
-    animation: change 7s ease-in-out infinite;
+    animation: change 5s ease-in-out infinite;
+}
+
+.flag h1 {
+    padding-top: 50px;
 }
 
 h1{
@@ -215,6 +219,7 @@ p{
 
 #footer {
     display: flex;
+    background-color: #e7e7eb;
     justify-content: space-between;
     align-items: center;
     align-items: center;
