--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@
 
 #header{
     display: flex;
+    background-color: #e7e7eb;
     justify-content: space-between;
     align-items: center;
     padding-left: 100px;
@@ -182,7 +183,7 @@ ul {
 } 
 
 .item-element-1-4 {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('../image/teachers.png');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('https://images.pexels.com/photos/5427870/pexels-photo-5427870.jpeg?auto=compress&cs=tinysrgb&w=600');
 }
 
 .item-element-1-1 p, .item-element-1-2 p, .item-element-1-3 p, .item-element-1-4 p {
@@ -215,14 +216,15 @@ ul {
     font-size: 25px;
 }
 
-#footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    align-items: center;
-    padding-left: 100px;
-    padding-right: 100px;
-}
+    #footer {
+        display: flex;
+        background-color: #e7e7eb;
+        justify-content: space-between;
+        align-items: center;
+        align-items: center;
+        padding-left: 100px;
+        padding-right: 100px;
+    }
 
 .footer-menu {
     text-align: center;
@@ -357,7 +359,7 @@ ul {
     /* Основные стили для меню */
     .menu li {
         display: block;
-        font-size: 15px;
+        font-size: 20px;
         padding: 5px 10px;
     }
 
