--- a/css/team.css
+++ b/css/team.css
@@ -6,6 +6,7 @@
 
 #header{
     display: flex;
+    background-color: #e7e7eb;
     justify-content: space-between;
     align-items: center;
     padding-left: 100px;
@@ -111,14 +112,96 @@ input#search-bar{
 
 #content {
     display: block;
+    padding-top: 20px;
     padding-left: 100px;
     padding-right: 100px;
     padding-bottom: 50px;
 }
 
+.gallery-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    background-color: #fff;
+    width: 80%;
+    margin: 0 auto;
+    padding: 10px;
+}
+
+.gallery-item {
+    flex-basis: 32.7%;
+    margin-bottom: 6px;
+    opacity: .85;
+    cursor: pointer;
+}
+
+.gallery-item:hover {
+    opacity: 1;
+}
+
+.gallery-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.gallery-content {
+    font-size: .8em;
+}
+
+.lightbox {
+    position: fixed;
+    display: none;
+    background-color: rgba(0, 0, 0, 0.8);
+    width: 100%;
+    height: 100%;              
+    overflow: auto;
+    top: 0;
+    left: 0;
+}
+
+.lightbox-content {
+    position: relative;
+    width: 70%;
+    height: 70%;
+    margin: 5% auto;
+}
+
+.lightbox-content img {
+    border-radius: 7px;
+    box-shadow: 0 0 3px 0 rgba(225, 225, 225, .25);
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.lightbox-prev,
+.lightbox-next {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    padding: 7px;
+    top: 45%;
+    cursor: pointer;
+}
+
+.lightbox-prev {
+    left: 0;
+}
+
+.lightbox-next {
+    right: 0;
+}
+
+.lightbox-prev:hover,
+.lightbox-next:hover {
+    opacity: .8;
+}
+
 h1 {
     text-align: center;
     font-size: 30px;
+    padding-top: 10px;
     padding-bottom: 50px;
 }
 
@@ -131,6 +214,7 @@ p{
 
 #footer {
     display: flex;
+    background-color: #e7e7eb;
     justify-content: space-between;
     align-items: center;
     align-items: center;
@@ -193,4 +277,235 @@ p{
     width: 60px;
     height: 60px;
     padding: 5px;
+}
+
+@media screen and (max-width: 430px) {
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    
+    #header{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-bottom: 20px;
+    }
+    
+    .logo{
+        width: 150px;
+        height: 150px;
+    }
+    
+    .search-container{
+        width: 250px;
+        display: block;
+        padding-top: 20px;
+    }
+      
+    input#search-bar{
+        margin: 0 auto;
+        width: 100%;
+        height: 45px;
+        padding: 0 20px;
+        font-size: 1rem;
+        border: 1px solid #000;
+        outline: none;
+        &:focus{
+          border: 2px solid #a6abb2;
+          transition: 0.35s ease;
+          color: #000;
+          &::-webkit-input-placeholder{
+            transition: opacity 0.45s ease; 
+              opacity: 0;
+           }
+          &::-moz-placeholder {
+            transition: opacity 0.45s ease; 
+              opacity: 0;
+           }
+          &:-ms-placeholder {
+           transition: opacity 0.45s ease; 
+             opacity: 0;
+           }    
+        }
+    }
+      
+    .search-icon{
+        position: relative;
+        float: right;
+        width: 75px;
+        height: 75px;
+        top: -60px;
+        right: -20px;
+    }
+
+    .menu {
+        display: none;
+    }
+
+    ul {
+        display: block;
+    }
+
+    /* Основные стили для меню */
+    .menu li {
+        display: block;
+        font-size: 20px;
+        padding: 5px 10px;
+    }
+
+    .menu li a {
+        text-decoration: none;
+        color: #0E0D35;
+    }
+
+    .menu li a:hover {
+        color: #a6abb2;
+    }
+
+    .dropdown {
+        position: relative;
+        display: block;
+    }
+
+    /* Скрыть подменю по умолчанию */
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f4f6f9;
+        min-width: 160px;
+        z-index: 1;
+        top: 100%; /* Появляться сразу под пунктом меню */
+        left: 0;   /* Выравнивание по левому краю пункта меню */
+    }
+
+    /* Показать подменю при добавлении класса show */
+    .dropdown-content.show {
+        display: block;
+    }
+
+    .dropdown-content a {
+        color: #0E0D35;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+
+    .dropdown-content a:hover {
+        background-color: #f4f3ff;
+        border: 2px solid #000;
+    }
+
+    /* Гамбургер-иконка */
+    .hamburger-menu {
+        display: block;
+        cursor: pointer;
+        position: absolute;
+        top: 250px;
+        left: 70px;
+    }
+
+    .bar {
+        width: 25px;
+        height: 3px;
+        background-color: #333;
+        margin: 5px 0;
+    }
+
+    /* Стили для активного меню */
+    .menu.active {
+        display: block;
+    }
+    
+    #content {
+        display: block;
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-bottom: 20px;
+    }
+    
+    .gallery-item {
+        flex-basis: 100%;
+        margin-bottom: 5px;
+    }
+
+    .lightbox-content {
+        width: 60%;
+        margin: 15% auto;
+    }
+
+    h1 {
+        text-align: center;
+        font-size: 20px;
+        padding-bottom: 20px;
+    }
+    
+    p{
+        font-size: 20px;
+        text-align: justify;
+        text-indent: 25px;
+        line-height: 1.5;
+    }
+    
+    #footer {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    
+    .footer-menu {
+        text-align: center;
+        list-style: none;
+    }
+    
+    .footer-menu li {
+        display: block;
+        font-size: 20px;
+    }
+    
+    .footer-menu li a{
+        text-decoration: none;
+        color: #0E0D35;
+    }
+    
+    .footer-menu li a:hover{
+        color:  #a6abb2;
+    }
+    
+    .list1, .list2 {
+        text-align: center;
+        list-style: none;
+    }
+    
+    .list1 li, .list2 li {
+        display: block;
+        font-size: 20px;
+    }
+    
+    .list1 li a, .list2 li a {
+        text-decoration: none;
+        color: #0E0D35;
+    }
+    
+    .list1 li a:hover {
+        color: #a6abb2;
+    }
+    
+    .media {
+        text-align: center;
+    }
+    
+    .media p {
+        font-size: 20px;
+        padding-bottom: 20px;
+    }
+    
+    .media-item img {
+        width: 60px;
+        height: 60px;
+    }
 }
