--- a/css/contact.css
+++ b/css/contact.css
@@ -4,6 +4,22 @@
     box-sizing: border-box;
 }
 
+body {
+    transition: background-color 0.5s, color 0.5s;
+}
+
+/* Светлая тема */
+body.light-mode {
+    background-color: #fff;
+    color: #000000;
+}
+
+/* Темная тема */
+body.dark-mode {
+    background-color: #181818;
+    color: #fff;
+}
+
 #header{
     display: flex;
     background-color: #e7e7eb;
@@ -24,7 +40,8 @@
     padding-top: 75px;
 }
   
-input#search-bar{
+/* Основные стили для текстового поля */
+input#search-bar {
     margin: 0 auto;
     width: 100%;
     height: 45px;
@@ -32,23 +49,54 @@ input#search-bar{
     font-size: 1rem;
     border: 1px solid #000;
     outline: none;
-    &:focus{
-      border: 2px solid #a6abb2;
-      transition: 0.35s ease;
-      color: #000;
-      &::-webkit-input-placeholder{
-        transition: opacity 0.45s ease; 
-          opacity: 0;
-       }
-      &::-moz-placeholder {
-        transition: opacity 0.45s ease; 
-          opacity: 0;
-       }
-      &:-ms-placeholder {
-       transition: opacity 0.45s ease; 
-         opacity: 0;
-       }    
-    }
+    transition: border 0.35s ease, color 0.35s ease, background-color 0.35s ease;
+}
+
+/* Светлая тема */
+.light-mode input#search-bar {
+    background-color: #fff;
+    color: #000;
+    border: 1px solid #ccc;
+}
+
+.light-mode input#search-bar:focus {
+    border: 2px solid #333;
+}
+
+/* Темная тема */
+.dark-mode input#search-bar {
+    background-color: #333;
+    color: #fff;
+    border: 1px solid #555;
+}
+
+.dark-mode input#search-bar:focus {
+    border: 2px solid #a6abb2;
+}
+
+/* Стили для плейсхолдера */
+input#search-bar::-webkit-input-placeholder {
+    transition: opacity 0.45s ease;
+}
+
+input#search-bar::-moz-placeholder {
+    transition: opacity 0.45s ease;
+}
+
+input#search-bar:-ms-placeholder {
+    transition: opacity 0.45s ease;
+}
+
+input#search-bar:focus::-webkit-input-placeholder {
+    opacity: 0;
+}
+
+input#search-bar:focus::-moz-placeholder {
+    opacity: 0;
+}
+
+input#search-bar:focus:-ms-placeholder {
+    opacity: 0;
 }
   
 .search-icon{
@@ -77,7 +125,7 @@ ul {
 
 .menu li a{
     text-decoration: none;
-    color: #0E0D35;
+    color: #000;
 }
 
 .menu li a:hover{
@@ -99,7 +147,7 @@ ul {
 }
 
 .dropdown-content a {
-    color: #0E0D35;
+    color: #000;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -114,11 +162,87 @@ ul {
     display: block;
 }
 
+.dark-mode #header {
+    background-color: #212121;
+    color: #fff;
+}
+
+.dark-mode #footer {
+    background-color: #212121;
+    color: #fff;
+}
+
+.dark-mode .menu li a{
+    color: #fff;
+}
+
+.dark-mode #search-bar {
+    background-color: #121212;
+    color: #fff;
+}
+
+.dark-mode .dropdown-content a{
+    background-color: #212121;
+}
+
+.dark-mode .dropdown-content a:hover{
+    background-color: #121212;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #fff;
+    transition: .4s;
+    border-radius: 34px;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: #D3D3D3;
+    transition: .4s;
+    border-radius: 50%;
+}
+
+input:checked + .slider {
+    background-color: #000;
+}
+
+input:checked + .slider:before {
+    transform: translateX(26px);
+}
+
+.switch {
+    margin-top: 10px;
+}
+
 #content {
     display: block;
     padding-top: 20px;
-    padding-left: 60px;
-    padding-right: 60px;
+    padding-left: 100px;
+    padding-right: 100px;
     padding-bottom: 20px;
 }
 
@@ -165,12 +289,38 @@ textarea {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        resize: none;
+}
+
+.dark-mode input[type="text"], input[type="email"], textarea {
+        background-color: #121212;
 }
 
 input[type="submit"] {
     width: 170px;
     height: 30px;
 }
+
+.dark-mode input[type="submit"] {
+    background-color: #181818;
+    color: #fff;
+} 
+
+.dark-mode {
+    --background-color: #181818;
+    --text-color: #ffffff;
+  }
+
+  input[type="text"], input[type="email"], textarea {
+    background-color: var(--background-color);
+    color: var(--text-color);
+    border: 1px solid var(--text-color);
+  }
+  
+  .light-mode {
+    --background-color: #ffffff;
+    --text-color: #000000;
+  }
 
 #footer {
     display: flex;
@@ -195,7 +345,11 @@ input[type="submit"] {
 
 .footer-menu li a{
     text-decoration: none;
-    color: #0E0D35;
+    color: #000;
+}
+
+.dark-mode .footer-menu li a {
+    color: #fff;
 }
 
 .footer-menu li a:hover{
@@ -217,7 +371,11 @@ input[type="submit"] {
 
 .list1 li a, .list2 li a {
     text-decoration: none;
-    color: #0E0D35;
+    color: #000;
+}
+
+.dark-mode .list1 li a {
+    color: #fff;
 }
 
 .list1 li a:hover {
@@ -230,6 +388,7 @@ input[type="submit"] {
 
 .media p {
     font-size: 20px;
+    font-weight: bold;
     padding-bottom: 20px;
 }
 
@@ -267,7 +426,8 @@ input[type="submit"] {
         padding-top: 20px;
     }
       
-    input#search-bar{
+    /* Основные стили для текстового поля */
+    input#search-bar {
         margin: 0 auto;
         width: 100%;
         height: 45px;
@@ -275,23 +435,54 @@ input[type="submit"] {
         font-size: 1rem;
         border: 1px solid #000;
         outline: none;
-        &:focus{
-          border: 2px solid #a6abb2;
-          transition: 0.35s ease;
-          color: #000;
-          &::-webkit-input-placeholder{
-            transition: opacity 0.45s ease; 
-              opacity: 0;
-           }
-          &::-moz-placeholder {
-            transition: opacity 0.45s ease; 
-              opacity: 0;
-           }
-          &:-ms-placeholder {
-           transition: opacity 0.45s ease; 
-             opacity: 0;
-           }    
-        }
+        transition: border 0.35s ease, color 0.35s ease, background-color 0.35s ease;
+    }
+
+    /* Светлая тема */
+    .light-mode input#search-bar {
+        background-color: #fff;
+        color: #000;
+        border: 1px solid #ccc;
+    }
+
+    .light-mode input#search-bar:focus {
+        border: 2px solid #333;
+    }
+
+    /* Темная тема */
+    .dark-mode input#search-bar {
+        background-color: #333;
+        color: #fff;
+        border: 1px solid #555;
+    }
+
+    .dark-mode input#search-bar:focus {
+        border: 2px solid #a6abb2;
+    }
+
+    /* Стили для плейсхолдера */
+    input#search-bar::-webkit-input-placeholder {
+        transition: opacity 0.45s ease;
+    }
+
+    input#search-bar::-moz-placeholder {
+        transition: opacity 0.45s ease;
+    }
+
+    input#search-bar:-ms-placeholder {
+        transition: opacity 0.45s ease;
+    }
+
+    input#search-bar:focus::-webkit-input-placeholder {
+        opacity: 0;
+    }
+
+    input#search-bar:focus::-moz-placeholder {
+        opacity: 0;
+    }
+
+    input#search-bar:focus:-ms-placeholder {
+        opacity: 0;
     }
       
     .search-icon{
@@ -314,13 +505,13 @@ input[type="submit"] {
     /* Основные стили для меню */
     .menu li {
         display: block;
-        font-size: 15px;
+        font-size: 20px;
         padding: 5px 10px;
     }
 
     .menu li a {
         text-decoration: none;
-        color: #0E0D35;
+        color: #000;
     }
 
     .menu li a:hover {
@@ -349,7 +540,7 @@ input[type="submit"] {
     }
 
     .dropdown-content a {
-        color: #0E0D35;
+        color: #000;
         padding: 12px 16px;
         text-decoration: none;
         display: block;
@@ -383,8 +574,8 @@ input[type="submit"] {
     
     #content {
         display: block;
-        padding-left: 20px;
-        padding-right: 20px;
+        padding-left: 30px;
+        padding-right: 30px;
         padding-bottom: 20px;
     }
     
@@ -455,7 +646,7 @@ input[type="submit"] {
     
     .footer-menu li a{
         text-decoration: none;
-        color: #0E0D35;
+        color: #000;
     }
     
     .footer-menu li a:hover{
@@ -474,7 +665,7 @@ input[type="submit"] {
     
     .list1 li a, .list2 li a {
         text-decoration: none;
-        color: #0E0D35;
+        color: #000;
     }
     
     .list1 li a:hover {
