--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,22 @@
     box-sizing: border-box;
 }
 
+body {
+    transition: background-color 0.5s, color 0.5s;
+}
+
+/* Светлая тема */
+body.light-mode {
+    background-color: #fff;
+    color: #000000;
+}
+
+/* Темная тема */
+body.dark-mode {
+    background-color: #181818;
+    color: #fff;
+}
+
 #header{
     display: flex;
     background-color: #e7e7eb;
@@ -24,7 +40,8 @@
     padding-top: 75px;
 }
   
-input#search-bar{
+/* Основные стили для текстового поля */
+input#search-bar {
     margin: 0 auto;
     width: 100%;
     height: 45px;
@@ -32,23 +49,54 @@ input#search-bar{
     font-size: 1rem;
     border: 1px solid #000;
     outline: none;
-    &:focus{
-      border: 2px solid #a6abb2;
-      transition: 0.35s ease;
-      color: #000;
-      &::-webkit-input-placeholder{
-        transition: opacity 0.45s ease; 
-          opacity: 0;
-       }
-      &::-moz-placeholder {
-        transition: opacity 0.45s ease; 
-          opacity: 0;
-       }
-      &:-ms-placeholder {
-       transition: opacity 0.45s ease; 
-         opacity: 0;
-       }    
-    }
+    transition: border 0.35s ease, color 0.35s ease, background-color 0.35s ease;
+}
+
+/* Светлая тема */
+.light-mode input#search-bar {
+    background-color: #fff;
+    color: #000;
+    border: 1px solid #ccc;
+}
+
+.light-mode input#search-bar:focus {
+    border: 2px solid #333;
+}
+
+/* Темная тема */
+.dark-mode input#search-bar {
+    background-color: #333;
+    color: #fff;
+    border: 1px solid #555;
+}
+
+.dark-mode input#search-bar:focus {
+    border: 2px solid #a6abb2;
+}
+
+/* Стили для плейсхолдера */
+input#search-bar::-webkit-input-placeholder {
+    transition: opacity 0.45s ease;
+}
+
+input#search-bar::-moz-placeholder {
+    transition: opacity 0.45s ease;
+}
+
+input#search-bar:-ms-placeholder {
+    transition: opacity 0.45s ease;
+}
+
+input#search-bar:focus::-webkit-input-placeholder {
+    opacity: 0;
+}
+
+input#search-bar:focus::-moz-placeholder {
+    opacity: 0;
+}
+
+input#search-bar:focus:-ms-placeholder {
+    opacity: 0;
 }
   
 .search-icon{
@@ -77,7 +125,7 @@ ul {
 
 .menu li a{
     text-decoration: none;
-    color: #0E0D35;
+    color: #000;
 }
 
 .menu li a:hover{
@@ -114,9 +162,95 @@ ul {
     display: block;
 }
 
+.dark-mode #header {
+    background-color: #212121;
+    color: #fff;
+}
+
+.dark-mode #footer {
+    background-color: #212121;
+    color: #fff;
+}
+
+.dark-mode .menu li a{
+    color: #fff;
+}
+
+.dark-mode .footer-menu li a {
+    color: #fff;
+}
+
+.dark-mode .list1 li a {
+    color: #fff;
+}
+
+.dark-mode #search-bar {
+    background-color: #121212;
+    color: #fff;
+}
+
+.dark-mode .dropdown-content a{
+    background-color: #212121;
+}
+
+.dark-mode .dropdown-content a:hover{
+    background-color: #121212;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #fff;
+    transition: .4s;
+    border-radius: 34px;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: #D3D3D3;
+    transition: .4s;
+    border-radius: 50%;
+}
+
+input:checked + .slider {
+    background-color: #000;
+}
+
+input:checked + .slider:before {
+    transform: translateX(26px);
+}
+
+.switch {
+    margin-top: 10px;
+}
+
 #content {
     display: block;
     padding-bottom: 50px;
+    transition: opacity 0.5s ease-in-out;
+    opacity: 1;
 }
 
 .slogan{
@@ -216,15 +350,15 @@ ul {
     font-size: 25px;
 }
 
-    #footer {
-        display: flex;
-        background-color: #e7e7eb;
-        justify-content: space-between;
-        align-items: center;
-        align-items: center;
-        padding-left: 100px;
-        padding-right: 100px;
-    }
+#footer {
+    display: flex;
+    background-color: #e7e7eb;
+    justify-content: space-between;
+    align-items: center;
+    align-items: center;
+    padding-left: 100px;
+    padding-right: 100px;
+}
 
 .footer-menu {
     text-align: center;
@@ -239,7 +373,7 @@ ul {
 
 .footer-menu li a{
     text-decoration: none;
-    color: #0E0D35;
+    color: #000;
 }
 
 .footer-menu li a:hover{
@@ -261,7 +395,7 @@ ul {
 
 .list1 li a, .list2 li a {
     text-decoration: none;
-    color: #0E0D35;
+    color: #000;
 }
 
 .list1 li a:hover {
@@ -312,7 +446,8 @@ ul {
         padding-top: 20px;
     }
       
-    input#search-bar{
+    /* Основные стили для текстового поля */
+    input#search-bar {
         margin: 0 auto;
         width: 100%;
         height: 45px;
@@ -320,23 +455,54 @@ ul {
         font-size: 1rem;
         border: 1px solid #000;
         outline: none;
-        &:focus{
-          border: 2px solid #a6abb2;
-          transition: 0.35s ease;
-          color: #000;
-          &::-webkit-input-placeholder{
-            transition: opacity 0.45s ease; 
-              opacity: 0;
-           }
-          &::-moz-placeholder {
-            transition: opacity 0.45s ease; 
-              opacity: 0;
-           }
-          &:-ms-placeholder {
-           transition: opacity 0.45s ease; 
-             opacity: 0;
-           }    
-        }
+        transition: border 0.35s ease, color 0.35s ease, background-color 0.35s ease;
+    }
+
+    /* Светлая тема */
+    .light-mode input#search-bar {
+        background-color: #fff;
+        color: #000;
+        border: 1px solid #ccc;
+    }
+
+    .light-mode input#search-bar:focus {
+        border: 2px solid #333;
+    }
+
+    /* Темная тема */
+    .dark-mode input#search-bar {
+        background-color: #333;
+        color: #fff;
+        border: 1px solid #555;
+    }
+
+    .dark-mode input#search-bar:focus {
+        border: 2px solid #a6abb2;
+    }
+
+    /* Стили для плейсхолдера */
+    input#search-bar::-webkit-input-placeholder {
+        transition: opacity 0.45s ease;
+    }
+
+    input#search-bar::-moz-placeholder {
+        transition: opacity 0.45s ease;
+    }
+
+    input#search-bar:-ms-placeholder {
+        transition: opacity 0.45s ease;
+    }
+
+    input#search-bar:focus::-webkit-input-placeholder {
+        opacity: 0;
+    }
+
+    input#search-bar:focus::-moz-placeholder {
+        opacity: 0;
+    }
+
+    input#search-bar:focus:-ms-placeholder {
+        opacity: 0;
     }
       
     .search-icon{
@@ -365,7 +531,7 @@ ul {
 
     .menu li a {
         text-decoration: none;
-        color: #0E0D35;
+        color: #000;
     }
 
     .menu li a:hover {
@@ -394,7 +560,7 @@ ul {
     }
 
     .dropdown-content a {
-        color: #0E0D35;
+        color: #000;
         padding: 12px 16px;
         text-decoration: none;
         display: block;
@@ -425,7 +591,7 @@ ul {
     .menu.active {
         display: block;
     }
-    
+
     #content {
         display: block;
         padding-bottom: 20px;
@@ -484,7 +650,7 @@ ul {
     } 
     
     .item-element-1-4 {
-        background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('../image/teachers.png');
+        background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('https://images.pexels.com/photos/5427870/pexels-photo-5427870.jpeg?auto=compress&cs=tinysrgb&w=600');
     }
     
     .item-element-1-1 p, .item-element-1-2 p, .item-element-1-3 p, .item-element-1-4 p {
@@ -540,7 +706,7 @@ ul {
     
     .footer-menu li a{
         text-decoration: none;
-        color: #0E0D35;
+        color: #000;
     }
     
     .footer-menu li a:hover{
@@ -559,7 +725,7 @@ ul {
     
     .list1 li a, .list2 li a {
         text-decoration: none;
-        color: #0E0D35;
+        color: #000;
     }
     
     .list1 li a:hover {
